--- a/public/assignment/form-fields.html
+++ b/public/assignment/form-fields.html
@@ -74,20 +74,20 @@
         <form>
             <label for="firstNm">First Name:</label>
             <div class="row form-group">
-                <div class="col-xs-7">
+                <div class="col-xs-6">
                     <input type="text" class="form-control" id="firstNm" placeholder="First Name">
                 </div>
-                <div class="col-xs-5">
-                    <a href="#" class="btn btn-primary">
+                <div class="col-xs-6">
+                    <a href="#" class="btn btn-primary button-float">
                         <scan class="glyphicon glyphicon-pencil"></scan>
                     </a>
-                    <a href="#" class="btn btn-success">
+                    <a href="#" class="btn btn-success button-float">
                         <scan class="glyphicon glyphicon-plus"></scan>
                     </a>
-                    <a href="#" class="btn btn-danger">
+                    <a href="#" class="btn btn-danger button-float">
                         <scan class="glyphicon glyphicon-remove"></scan>
                     </a>
-                    <a href="#" class="btn btn-warning">
+                    <a href="#" class="btn btn-warning button-float">
                         <scan class="glyphicon glyphicon-menu-hamburger"></scan>
                     </a>
                 </div>
@@ -95,20 +95,20 @@
 
             <label for="lastNm">Last Name:</label>
             <div class="row form-group">
-                <div class="col-xs-7">
+                <div class="col-xs-6">
                     <input type="text" class="form-control" id="lastNm" placeholder="Last Name">
                 </div>
-                <div class="col-xs-5">
-                    <a href="#" class="btn btn-primary">
+                <div class="col-xs-6">
+                    <a href="#" class="btn btn-primary button-float">
                         <scan class="glyphicon glyphicon-pencil"></scan>
                     </a>
-                    <a href="#" class="btn btn-success">
+                    <a href="#" class="btn btn-success button-float">
                         <scan class="glyphicon glyphicon-plus"></scan>
                     </a>
-                    <a href="#" class="btn btn-danger">
+                    <a href="#" class="btn btn-danger button-float">
                         <scan class="glyphicon glyphicon-remove"></scan>
                     </a>
-                    <a href="#" class="btn btn-warning">
+                    <a href="#" class="btn btn-warning button-float">
                         <scan class="glyphicon glyphicon-menu-hamburger"></scan>
                     </a>
                 </div>
@@ -116,20 +116,20 @@
 
             <label for="dob">Date of Birth:</label>
             <div class="row form-group">
-                <div class="col-xs-7">
+                <div class="col-xs-6">
                     <input type="date" class="form-control" id="dob" placeholder="Date of Birth">
                 </div>
-                <div class="col-xs-5">
-                    <a href="#" class="btn btn-primary">
+                <div class="col-xs-6">
+                    <a href="#" class="btn btn-primary button-float">
                         <scan class="glyphicon glyphicon-pencil"></scan>
                     </a>
-                    <a href="#" class="btn btn-success">
+                    <a href="#" class="btn btn-success button-float">
                         <scan class="glyphicon glyphicon-plus"></scan>
                     </a>
-                    <a href="#" class="btn btn-danger">
+                    <a href="#" class="btn btn-danger button-float">
                         <scan class="glyphicon glyphicon-remove"></scan>
                     </a>
-                    <a href="#" class="btn btn-warning">
+                    <a href="#" class="btn btn-warning button-float">
                         <scan class="glyphicon glyphicon-menu-hamburger"></scan>
                     </a>
                 </div>
@@ -137,23 +137,23 @@
 
             <label for="gender">Gender:</label>
             <div class="row form-group">
-                <div class="col-xs-7">
+                <div class="col-xs-6">
                     <select class="form-control" id="gender">
                         <option>Male</option>
                         <option>Female</option>
                     </select>
                 </div>
-                <div class="col-xs-5">
-                    <a href="#" class="btn btn-primary">
+                <div class="col-xs-6">
+                    <a href="#" class="btn btn-primary button-float">
                         <scan class="glyphicon glyphicon-pencil"></scan>
                     </a>
-                    <a href="#" class="btn btn-success">
+                    <a href="#" class="btn btn-success button-float">
                         <scan class="glyphicon glyphicon-plus"></scan>
                     </a>
-                    <a href="#" class="btn btn-danger">
+                    <a href="#" class="btn btn-danger button-float">
                         <scan class="glyphicon glyphicon-remove"></scan>
                     </a>
-                    <a href="#" class="btn btn-warning">
+                    <a href="#" class="btn btn-warning button-float">
                         <scan class="glyphicon glyphicon-menu-hamburger"></scan>
                     </a>
                 </div>
@@ -161,7 +161,7 @@
 
             <label for="roles">Roles:</label>
             <div class="row form-group">
-                <div class="col-xs-7">
+                <div class="col-xs-6">
                     <div id="roles" class="checkbox">
                         <label>
                             <input type="checkbox" value="">
@@ -181,17 +181,17 @@
                         </label>
                     </div>
                 </div>
-                <div class="col-xs-5">
-                    <a href="#" class="btn btn-primary">
+                <div class="col-xs-6">
+                    <a href="#" class="btn btn-primary button-float">
                         <scan class="glyphicon glyphicon-pencil"></scan>
                     </a>
-                    <a href="#" class="btn btn-success">
+                    <a href="#" class="btn btn-success button-float">
                         <scan class="glyphicon glyphicon-plus"></scan>
                     </a>
-                    <a href="#" class="btn btn-danger">
+                    <a href="#" class="btn btn-danger button-float">
                         <scan class="glyphicon glyphicon-remove"></scan>
                     </a>
-                    <a href="#" class="btn btn-warning">
+                    <a href="#" class="btn btn-warning button-float">
                         <scan class="glyphicon glyphicon-menu-hamburger"></scan>
                     </a>
                 </div>
@@ -199,7 +199,7 @@
 
             <label for="radio1">License Agreement:</label>
             <div class="row form-group">
-                <div class="col-xs-7">
+                <div class="col-xs-6">
                     <div class="radio">
                         <label>
                             <input type="radio" name="optionsRadios" id="radio1" value="option1" checked>
@@ -213,17 +213,17 @@
                         </label>
                     </div>
                 </div>
-                <div class="col-xs-5">
-                    <a href="#" class="btn btn-primary">
+                <div class="col-xs-6">
+                    <a href="#" class="btn btn-primary button-float">
                         <scan class="glyphicon glyphicon-pencil"></scan>
                     </a>
-                    <a href="#" class="btn btn-success">
+                    <a href="#" class="btn btn-success button-float">
                         <scan class="glyphicon glyphicon-plus"></scan>
                     </a>
-                    <a href="#" class="btn btn-danger">
+                    <a href="#" class="btn btn-danger button-float">
                         <scan class="glyphicon glyphicon-remove"></scan>
                     </a>
-                    <a href="#" class="btn btn-warning">
+                    <a href="#" class="btn btn-warning button-float">
                         <scan class="glyphicon glyphicon-menu-hamburger"></scan>
                     </a>
                 </div>
@@ -232,7 +232,7 @@
 
             <label for="dropDown">Add new field: </label>
             <div class="row form-group">
-                <div class="col-xs-7">
+                <div class="col-xs-6">
                     <select class="form-control" id="dropDown">
                         <option>Single Line Text</option>
                         <option>Date</option>
@@ -242,8 +242,8 @@
                         <option>Paragraph Text Field</option>
                     </select>
                 </div>
-                <div class="col-xs-5">
-                    <a href="#" class="btn btn-success">
+                <div class="col-xs-6">
+                    <a href="#" class="btn btn-success button-float">
                         <scan class="glyphicon glyphicon-plus"></scan>
                     </a>
                 </div>
