--- a/public/assignment/form-fields.html
+++ b/public/assignment/form-fields.html
@@ -29,7 +29,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Form Maker</a>
+            <a class="navbar-brand" href="home.html">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -67,7 +67,7 @@
 <div class="col-sm-9 col-sm-offset-3 col-md-8 col-md-offset-2 main">
     <h2>Forms: Registration</h2>
     <ul class="nav nav-tabs">
-        <li role="presentation"><a href="forms.html">Form</a></li>
+        <li role="presentation"><a href="forms.html">Forms</a></li>
         <li role="presentation" class="active"><a href="form-fields.html">Fields</a></li>
     </ul>
     <div id="formField">
@@ -78,16 +78,16 @@
                     <input type="text" class="form-control" id="firstNm" placeholder="First Name">
                 </div>
                 <div class="col-xs-6">
-                    <a href="#" class="btn btn-primary button-float">
+                    <a href="#" class="btn btn-sm btn-primary">
                         <scan class="glyphicon glyphicon-pencil"></scan>
                     </a>
-                    <a href="#" class="btn btn-success button-float">
+                    <a href="#" class="btn btn-sm btn-success">
                         <scan class="glyphicon glyphicon-plus"></scan>
                     </a>
-                    <a href="#" class="btn btn-danger button-float">
+                    <a href="#" class="btn btn-sm btn-danger">
                         <scan class="glyphicon glyphicon-remove"></scan>
                     </a>
-                    <a href="#" class="btn btn-warning button-float">
+                    <a href="#" class="btn btn-sm btn-warning">
                         <scan class="glyphicon glyphicon-menu-hamburger"></scan>
                     </a>
                 </div>
@@ -99,16 +99,16 @@
                     <input type="text" class="form-control" id="lastNm" placeholder="Last Name">
                 </div>
                 <div class="col-xs-6">
-                    <a href="#" class="btn btn-primary button-float">
+                    <a href="#" class="btn btn-sm btn-primary">
                         <scan class="glyphicon glyphicon-pencil"></scan>
                     </a>
-                    <a href="#" class="btn btn-success button-float">
+                    <a href="#" class="btn btn-sm btn-success">
                         <scan class="glyphicon glyphicon-plus"></scan>
                     </a>
-                    <a href="#" class="btn btn-danger button-float">
+                    <a href="#" class="btn btn-sm btn-danger">
                         <scan class="glyphicon glyphicon-remove"></scan>
                     </a>
-                    <a href="#" class="btn btn-warning button-float">
+                    <a href="#" class="btn btn-sm btn-warning">
                         <scan class="glyphicon glyphicon-menu-hamburger"></scan>
                     </a>
                 </div>
@@ -120,16 +120,16 @@
                     <input type="date" class="form-control" id="dob" placeholder="Date of Birth">
                 </div>
                 <div class="col-xs-6">
-                    <a href="#" class="btn btn-primary button-float">
+                    <a href="#" class="btn btn-sm btn-primary">
                         <scan class="glyphicon glyphicon-pencil"></scan>
                     </a>
-                    <a href="#" class="btn btn-success button-float">
+                    <a href="#" class="btn btn-sm btn-success">
                         <scan class="glyphicon glyphicon-plus"></scan>
                     </a>
-                    <a href="#" class="btn btn-danger button-float">
+                    <a href="#" class="btn btn-sm btn-danger">
                         <scan class="glyphicon glyphicon-remove"></scan>
                     </a>
-                    <a href="#" class="btn btn-warning button-float">
+                    <a href="#" class="btn btn-sm btn-warning">
                         <scan class="glyphicon glyphicon-menu-hamburger"></scan>
                     </a>
                 </div>
@@ -144,16 +144,16 @@
                     </select>
                 </div>
                 <div class="col-xs-6">
-                    <a href="#" class="btn btn-primary button-float">
+                    <a href="#" class="btn btn-sm btn-primary">
                         <scan class="glyphicon glyphicon-pencil"></scan>
                     </a>
-                    <a href="#" class="btn btn-success button-float">
+                    <a href="#" class="btn btn-sm btn-success">
                         <scan class="glyphicon glyphicon-plus"></scan>
                     </a>
-                    <a href="#" class="btn btn-danger button-float">
+                    <a href="#" class="btn btn-sm btn-danger">
                         <scan class="glyphicon glyphicon-remove"></scan>
                     </a>
-                    <a href="#" class="btn btn-warning button-float">
+                    <a href="#" class="btn btn-sm btn-warning">
                         <scan class="glyphicon glyphicon-menu-hamburger"></scan>
                     </a>
                 </div>
@@ -182,16 +182,16 @@
                     </div>
                 </div>
                 <div class="col-xs-6">
-                    <a href="#" class="btn btn-primary button-float">
+                    <a href="#" class="btn btn-sm btn-primary">
                         <scan class="glyphicon glyphicon-pencil"></scan>
                     </a>
-                    <a href="#" class="btn btn-success button-float">
+                    <a href="#" class="btn btn-sm btn-success">
                         <scan class="glyphicon glyphicon-plus"></scan>
                     </a>
-                    <a href="#" class="btn btn-danger button-float">
+                    <a href="#" class="btn btn-sm btn-danger">
                         <scan class="glyphicon glyphicon-remove"></scan>
                     </a>
-                    <a href="#" class="btn btn-warning button-float">
+                    <a href="#" class="btn btn-sm btn-warning">
                         <scan class="glyphicon glyphicon-menu-hamburger"></scan>
                     </a>
                 </div>
@@ -214,16 +214,16 @@
                     </div>
                 </div>
                 <div class="col-xs-6">
-                    <a href="#" class="btn btn-primary button-float">
+                    <a href="#" class="btn btn-sm btn-primary">
                         <scan class="glyphicon glyphicon-pencil"></scan>
                     </a>
-                    <a href="#" class="btn btn-success button-float">
+                    <a href="#" class="btn btn-sm btn-success">
                         <scan class="glyphicon glyphicon-plus"></scan>
                     </a>
-                    <a href="#" class="btn btn-danger button-float">
+                    <a href="#" class="btn btn-sm btn-danger">
                         <scan class="glyphicon glyphicon-remove"></scan>
                     </a>
-                    <a href="#" class="btn btn-warning button-float">
+                    <a href="#" class="btn btn-sm btn-warning">
                         <scan class="glyphicon glyphicon-menu-hamburger"></scan>
                     </a>
                 </div>
@@ -243,7 +243,7 @@
                     </select>
                 </div>
                 <div class="col-xs-6">
-                    <a href="#" class="btn btn-success button-float">
+                    <a href="#" class="btn btn-sm btn-success">
                         <scan class="glyphicon glyphicon-plus"></scan>
                     </a>
                 </div>
