--- a/public/assignment/forms.html
+++ b/public/assignment/forms.html
@@ -29,7 +29,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Form Maker</a>
+            <a class="navbar-brand" href="home.html">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -67,7 +67,7 @@
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <h2>Forms</h2>
     <ul class="nav nav-tabs">
-        <li role="presentation" class="active"><a href="forms.html">Form</a></li>
+        <li role="presentation" class="active"><a href="forms.html">Forms</a></li>
         <li role="presentation"><a href="form-fields.html">Fields</a></li>
     </ul>
     <div class="table-responsive">
