--- a/public/assignment/login.html
+++ b/public/assignment/login.html
@@ -29,7 +29,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Form Maker</a>
+            <a class="navbar-brand" href="home.html">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -63,23 +63,17 @@
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Login</h1>
-            <form class="form-horizontal">
+            <form action="profile.html">
                 <div class="form-group">
-                    <label for="username" class="col-sm-2 control-label">Username</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="username" placeholder="Username">
-                    </div>
+                    <label for="username" class="control-label">Username</label>
+                    <input type="text" class="form-control" id="username" placeholder="Username">
                 </div>
                 <div class="form-group">
-                    <label for="pass" class="col-sm-2 control-label">Password</label>
-                    <div class="col-sm-10">
-                        <input type="password" class="form-control" id="pass" placeholder="Password">
-                    </div>
+                    <label for="pass" class="control-label">Password</label>
+                    <input type="password" class="form-control" id="pass" placeholder="Password">
                 </div>
                 <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default">Login</button>
-                    </div>
+                    <button type="submit" class="btn btn-default btn-block">Login</button>
                 </div>
             </form>
         </div>
