--- a/public/assignment/register.html
+++ b/public/assignment/register.html
@@ -29,7 +29,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Form Maker</a>
+            <a class="navbar-brand" href="home.html">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -65,37 +65,29 @@
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Register</h1>
-            <form class="form-horizontal">
+            <div>
+            <form action="profile.html">
                 <div class="form-group">
-                    <label for="usrnm" class="col-sm-2 control-label">Username</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="usrnm" placeholder="Username">
-                    </div>
+                    <label for="usrnm" class="control-label">Username</label>
+                    <input type="text" class="form-control" id="usrnm" placeholder="Username">
                 </div>
                 <div class="form-group">
-                    <label for="pass1" class="col-sm-2 control-label">Password</label>
-                    <div class="col-sm-10">
-                        <input type="password" class="form-control" id="pass1" placeholder="Password">
-                    </div>
+                    <label for="pass1" class="control-label">Password</label>
+                    <input type="password" class="form-control" id="pass1" placeholder="Password">
                 </div>
                 <div class="form-group">
-                    <label for="pass2" class="col-sm-2 control-label">Verify Password</label>
-                    <div class="col-sm-10">
+                    <label for="pass2" class="control-label">Verify Password</label>
                         <input type="password" class="form-control" id="pass2" placeholder="Password">
-                    </div>
                 </div>
                 <div class="form-group">
-                    <label for="email" class="col-sm-2 control-label">Email</label>
-                    <div class="col-sm-10">
-                        <input type="email" class="form-control" id="email" placeholder="Email">
-                    </div>
+                    <label for="email" class="control-label">Email</label>
+                    <input type="email" class="form-control" id="email" placeholder="Email">
                 </div>
                 <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default">Register</button>
-                    </div>
+                    <button type="submit" class="btn btn-default btn-block">Register</button>
                 </div>
             </form>
+            </div>
         </div>
     </div>
 </div>
