added some css for homepage

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,63 @@
 <!doctype html>
 <html lang="en">
+
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="" content="">
+
+    <!-- Bootstrap Core CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="homepageStyle.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
     <title>
         Home Page
     </title>
 </head>
+
 <body>
-  <h1>Welcome!</h1>
-  <a href="assignment/home.html">Assignment</a>
-  <br>
-  <a href="project/home.html">Project</a>
+  <!-- Header -->
+  <a name="about"></a>
+
+
+  <div class="intro-header">
+      <div class="container">
+
+          <div class="row">
+              <div class="col-xs-12">
+                  <div class="intro-message">
+                      <h1>Sumeet Dubey</h1>
+                      <h3>Master in Computer Science Student</h3>
+                      <hr class="intro-divider">
+                      <ul class="list-inline intro-social-buttons">
+                          <li>
+                              <a href="assignment/home.html" class="btn btn-default btn-lg"><i class="fa fa-bar-chart fa-fw"></i> <span class="network-name">Assignment</span></a>
+                          </li>
+                          <li>
+                              <a href="project/home.html" class="btn btn-default btn-lg"><i class="fa fa-line-chart fa-fw"></i> <span class="network-name">Project</span></a>
+                          </li>
+                          <li>
+                              <a href="https://github.com/sumeetddubey" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                          </li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+
+      </div>
+      <!-- /.container -->
+
+  </div>
+
+  <!-- jQuery -->
+  <script src="js/jquery.js"></script>
+
+  <!-- Bootstrap Core JavaScript -->
+  <script src="js/bootstrap.min.js"></script>
 </body>
