added some css for homepage

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link href="homepageStyle.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <title>
