angular segmenting of header and sidebar

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,9 @@
                           <li>
                               <a href="https://github.com/sumeetddubey" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                           </li>
+                          <li>
+                              <a href="https://docs.google.com/a/husky.neu.edu/document/d/158_chE_se9vGVXcncxCkpYehqHKYZDwh1iK1CVm6BWo/edit?usp=sharing" class="btn btn-default btn-lg"><i class="fa fa-google fa-fw"></i> <span class="network-name">Project Proposal </span></a>
+                          </li>
                       </ul>
                   </div>
               </div>
