--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="FormBuilderApp">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Form Maker</title>
 
     <!--loading jQuery-->
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
@@ -13,27 +13,31 @@
     <!--loading angularJs route-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.0/angular-route.js"></script>
 
+    <!-- Bootstrap core CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+
+    <!--custom CSS-->
+    <link href="style.css" rel="stylesheet">
+
     <script src="app.js"></script>
     <script src="config.js"></script>
 </head>
-<body>
-<div class="container" ng-controller="MainController"></div>
 
-<div ng-include="views/header/header.view.html"></div>
+<body ng-controller="MainController">
+<div class="container-fluid" ng-include="'/webdev1/public/assignment/views/header/header.view.html'"></div>
 <div class="container-fluid">
     <div class="row">
-        <div ng-include="views/sidebar/sidebar.view.html"></div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" ng-view>Hello from Angular
-        </div>
+        <div ng-include="'/webdev1/public/assignment/views/sidebar/sidebar.view.html'"></div>
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" ng-view>{{hello}}</div>
     </div>
 </div>
 
-
-
-
-<!--loading bootstrap JavaScript and CSS-->
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<!--<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>-->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"></script>
 
 </body>
 </html>
