--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,7 @@
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-    <title>
-        Home Page
-    </title>
+    <title>Home Page</title>
 </head>
 
 <body>
@@ -28,7 +26,6 @@
 
   <div class="intro-header">
       <div class="container">
-
           <div class="row">
               <div class="col-xs-12">
                   <div class="intro-message">
@@ -52,10 +49,7 @@
                   </div>
               </div>
           </div>
-
       </div>
-      <!-- /.container -->
-
   </div>
 
   <!-- jQuery -->
