--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -40,5 +40,13 @@
 <script src="views/main/main.controller.js"></script>
 <script src="services/user.service.client.js"></script>
 <script src="services/form.service.client.js"></script>
+<script src="views/users/login.controller.js"></script>
+<script src="views/users/profile.controller.js"></script>
+<script src="views/users/register.controller.js"></script>
+<script src="views/home/home.controller.js"></script>
+<script src="views/forms/forms.controller.js"></script>
+<script src="views/admin/admin.controller.js"></script>
+<script src="views/forms/form-fields.controller.js"></script>
+
 </body>
 </html>
