--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -47,6 +47,8 @@
 <script src="views/forms/forms.controller.js"></script>
 <script src="views/admin/admin.controller.js"></script>
 <script src="views/forms/form-fields.controller.js"></script>
+<script src="views/header/header.controller.js"></script>
+<script src="views/sidebar/sidebar.controller.js"></script>
 
 </body>
 </html>
