--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
                               <a href="assignment/index.html" class="btn btn-default btn-lg"><i class="fa fa-bar-chart fa-fw"></i> <span class="network-name">Assignment</span></a>
                           </li>
                           <li>
-                              <a href="project/home.html" class="btn btn-default btn-lg"><i class="fa fa-line-chart fa-fw"></i> <span class="network-name">Project</span></a>
+                              <a href="project/index.html" class="btn btn-default btn-lg"><i class="fa fa-line-chart fa-fw"></i> <span class="network-name">Project</span></a>
                           </li>
                           <li>
                               <a href="https://github.com/sumeetddubey" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
