lots of changes (forms, fields, directives, uuid)

--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -15,7 +15,8 @@
     <script src="https://code.angularjs.org/1.5.0/angular-route.min.js"></script>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!--<link href="css/bootstrap.min.css" rel="stylesheet">-->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 
     <!--custom CSS-->
     <link href="css/style.css" rel="stylesheet">
@@ -39,17 +40,22 @@
 <script src="app.js"></script>
 <script src="config.js"></script>
 <script src="views/main/main.controller.js"></script>
+
+<script src="services/field.service.client.js"></script>
 <script src="services/user.service.client.js"></script>
 <script src="services/form.service.client.js"></script>
+
 <script src="views/users/login.controller.js"></script>
 <script src="views/users/profile.controller.js"></script>
 <script src="views/users/register.controller.js"></script>
 <script src="views/home/home.controller.js"></script>
 <script src="views/forms/forms.controller.js"></script>
 <script src="views/admin/admin.controller.js"></script>
-<script src="views/forms/form-fields.controller.js"></script>
+<script src="views/forms/field.controller.js"></script>
 <script src="views/header/header.controller.js"></script>
 <script src="views/sidebar/sidebar.controller.js"></script>
+
+<script src="directives/form-field.js"></script>
 
 </body>
 </html>
