minor fixes in forms in fields

--- a/public/assignment/client/directives/form-field.html
+++ b/public/assignment/client/directives/form-field.html
@@ -3,35 +3,35 @@
         <label for="textField">
             {{data.label}}
         </label>
-        <input id="textField" type="text" clsss="form-control" placeholder="{{data.placeholder}}">
+        <input id="textField" type="text" class="form-control" placeholder="{{data.placeholder}}">
     </div>
 
     <div ng-switch-when="TEXTAREA">
         <label for="textField">
             {{data.label}}
         </label>
-        <textarea id="textAreaFeild" clsss="form-control" placeholder="{{data.placeholder}}"></textarea>
+        <textarea id="textAreaFeild" class="form-control" placeholder="{{data.placeholder}}"></textarea>
     </div>
 
     <div ng-switch-when="DATE">
         <label for="dateField">
             {{data.label}}
         </label>
-        <input id="dateField" type="date" clsss="form-control" placeholder="{{data.placeholder}}">
+        <input id="dateField" type="date" class="form-control" placeholder="{{data.placeholder}}">
     </div>
 
     <div ng-switch-when="EMAIL">
         <label for="emailField">
             {{data.label}}
         </label>
-        <input id="emailField" type="email" clsss="form-control" placeholder="{{data.placeholder}}">
+        <input id="emailField" type="email" class="form-control" placeholder="{{data.placeholder}}">
     </div>
 
     <div ng-switch-when="PASSWORD">
         <label for="passwordField">
             {{data.label}}
         </label>
-        <input id="passwordField" type="password" clsss="form-control" placeholder="{{data.placeholder}}">
+        <input id="passwordField" type="password" class="form-control" placeholder="{{data.placeholder}}">
     </div>
 
     <div ng-switch-when="OPTIONS">
