--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -35,8 +35,10 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="http://code.jquery.com/ui/1.9.1/jquery-ui.js"></script>
 <!--<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>-->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
 <script src="app.js"></script>
 <script src="config.js"></script>
 <script src="views/main/main.controller.js"></script>
@@ -56,6 +58,7 @@
 <script src="views/sidebar/sidebar.controller.js"></script>
 
 <script src="directives/form-field.js"></script>
+<script src="directives/modal-field.js"></script>
 
 </body>
 </html>
