--- a/public/assignment/client/directives/form-field.html
+++ b/public/assignment/client/directives/form-field.html
@@ -7,10 +7,10 @@
     </div>
 
     <div ng-switch-when="TEXTAREA">
-        <label for="textField">
+        <label for="textAreaField">
             {{data.label}}
         </label>
-        <textarea id="textAreaFeild" class="form-control" placeholder="{{data.placeholder}}"></textarea>
+        <textarea id="textAreaField" class="form-control" placeholder="{{data.placeholder}}"></textarea>
     </div>
 
     <div ng-switch-when="DATE">
@@ -42,18 +42,18 @@
     </div>
 
     <div ng-switch-when="CHECKBOXES">
-        <label for="checkboxField">data.label</label>
+        <label for="checkboxField">{{data.label}}</label>
         <div ng-repeat="option in data.options" class="checkbox" id="checkboxField">
-            <label><input type="checkbox" ng-true-value="{{option.value}}" ng-false-value="">{{option.label}}</label>
+            <label><input type="checkbox" value="{{option.value}}">{{option.label}}</label>
         </div>
     </div>
 
     <div ng-switch-when="RADIOS">
-        <label for="radioField">data.label</label>
-        <div ng-repeat="option in data.options" class="checkbox" id="radioField">
-            <label><input type="checkbox" ng-true-value="{{option.value}}" ng-false-value="">{{option.label}}</label>
+        <label for="radioField">{{data.label}}</label>
+        <div ng-repeat="option in data.options" class="radio" id="radioField">
+            <label><input type="radio" value="{{option.value}}">{{option.label}}</label>
         </div>
     </div>
     
-    <div ng-switch-default>default</div>
+    <!--<div ng-switch-default>default</div>-->
 </div>
