--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,7 @@
 
   <!-- jQuery -->
   <script src="js/jquery.js"></script>
+  <script src="http://code.jquery.com/ui/1.9.1/jquery-ui.js"></script>
 
   <!-- Bootstrap Core JavaScript -->
   <script src="js/bootstrap.min.js"></script>
